# Turbin3Q125

./: .gitignore
amm/: Anchor.toml
amm/programs/amm/: Cargo.toml
capstone-project/: letter-of-intent.md  user-story.md
capstone-project/soltix/: Anchor.toml  IMPLEMENTATION_NOTES.md  NEXT_STEPS.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  package.json  tsconfig.json
capstone-project/soltix/programs/soltix/: Cargo.toml
capstone-project/soltix/programs/soltix/src/: errors.rs  lib.rs  state.rs
capstone-project/soltix/programs/soltix/src/contexts/: init_event.rs  mint_ticket.rs  mod.rs  whitelist.rs
capstone-project/soltix/scripts/: add_to_whitelist_devnet.ts  check_event_devnet.ts  create_event_devnet.ts  deploy-devnet.sh  mint_ticket_devnet.ts  test-all.sh  test-devnet.sh  test-mint-ticket.sh  test-whitelist.sh
capstone-project/soltix/tests/: create_event_devnet.ts  event_creation.ts  mint_ticket.ts  mint_ticket_local.ts  soltix.ts  whitelist.ts  whitelist_local.ts
escrow/: Anchor.toml  package.json
escrow/programs/escrow/: Cargo.toml
escrow/tests/: escrow.ts
marketplace/: Anchor.toml
marketplace/programs/marketplace/: Cargo.toml
nft-staking/: Anchor.toml
prerequisites/rust-prereq/: Cargo.toml
prerequisites/rust-prereq/src/: lib.rs
prerequisites/typescript-prereq/: airdrop.ts  convert.ts  enroll.ts  keygen.ts  package-lock.json  package.json  transfer.ts
prerequisites/typescript-prereq/programs/: Turbin3_prereq.ts
solana-starter/: .gitignore
solana-starter/ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  (+4 more)
vault/: Anchor.toml
(+29 files in other folders)
